# aws-healthcare-lifescience-ai-ml-sample-notebooks

./: .gitignore  .gitmodules  README.md  document_compliance_checker.ipynb  sagemaker_pipelines_automated_retraining.ipynb
.github/workflows/: jekyll-gh-pages.yml
.ipynb_checkpoints/: README-checkpoint.md
Solutions/Protein_structure_analysis/: README.md
docs/: 404.html  Gemfile  LICENSE  README.md  _config.yml  about.md  analytics.md  categories.md  deploy_jekyll.sh  feed.xml  index.html  jekyll-theme-satellite.gemspec  latest.md  robots.txt  search.md  sitemap.xml
docs/Blogs/: 2021-12-20-Automated-Retraining-of-Obesity-Models.html  2021-12-20-Predict-Average-Medicare-Hospital-Spending.html  2021-12-20-Predict-BRCA-Malignancy.html  2023-09-13-Interact-Conversationally-with-HealthLake.html  2024-02-28-GenAI-Powered-Clinical-Intelligenence.html  2024-02-29-Drug-Discovery-With-RAG-KBs.html  2024-02-29-Imporving-Patient-Experience-with-Digital-Front-Door.html  2024-03-06-Efficiently-fine-tune-ESM-2.html  2024-03-11-NVIDIA-BioNemo-on-Amazon-SageMaker.html  2024-05-31-Genomic-Language-Models-SageMaker-HelathOmics.html  2024-06-28-ESM3-Support-On-SageMaker.html  2024-09-02-federated-learning-ai-platform-for-brain-tumors.html  (+1 more)
workshops/Strands_Research_Agent/streamlit-chat/: .gitignore  README.md  app.py  pyproject.toml
workshops/Strands_Research_Agent/streamlit-chat/.streamlit/: config.toml
workshops/Strands_Research_Agent/streamlit-chat/example/: README.md  agent.py  requirements.txt
workshops/Strands_Research_Agent/streamlit-chat/example/tools/: search_pmc.py
(+355 files in other folders)
