[project]
name = "streamlit-chat"
version = "0.1.0"
description = "Simple Streamlit application for chatting with AI agents deployed to Amazon Bedrock AgentCore Runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.40.23",
  "streamlit>=1.49.1",
  "uv>=0.8.15",
]

[dependency-groups]
dev = [
    "bedrock-agentcore>=0.1.3",
    "bedrock-agentcore-starter-toolkit>=0.1.8",
    "strands-agents>=1.7.1",
]
